Trigger GitHub Pages deployment

--- a/index.html
+++ b/index.html
@@ -152,3 +152,4 @@ The content was well-structured and easy to digest. I feel like an SQL basics wi
 
 </div>
 
+<!-- Trigger new GitHub Pages deployment -->
