Fix: Correct case sensitivity for training_1.JPG in index.html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ layout: default
         </ul>
       </div>
       <div class="md:w-1/4 mt-12 md:mt-0 flex justify-center">
-        <div class="w-64 h-96 bg-gray-300 rounded-t-full rounded-b-full overflow-hidden shadow-lg mx-auto" style="background-image: url('assets/images/training_1.jpg'); background-size: cover; background-position: center;"></div>
+        <div class="w-64 h-96 bg-gray-300 rounded-t-full rounded-b-full overflow-hidden shadow-lg mx-auto" style="background-image: url('assets/images/training_1.JPG'); background-size: cover; background-position: center;"></div>
       </div>
     </div>
   </section>
