--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
       <img src="assets/images/circle.jpeg" alt="Stan's Profile Picture" class="w-40 h-40 mx-auto rounded-full mb-6 object-cover shadow-lg border-4 border-white">
       <h1 class="text-6xl font-extrabold leading-tight mb-4">Hello, I am Stan</h1>
       <p class="text-2xl font-light mb-10">I help individuals and businesses grow through training, mentoring, and consulting.</p>
-      <a href="#services" class="inline-block bg-white text-blue-600 font-bold py-4 px-10 rounded-full text-lg shadow-lg hover:bg-gray-100 transform transition duration-300 hover:scale-105">View My Work</a>
+      <a href="#services" class="inline-block bg-white text-blue-600 font-bold py-4 px-10 rounded-full text-lg shadow-lg hover:bg-gray-100 transform transition duration-300 hover:scale-105">View My Services</a>
     </div>
   </section>
 
