decreased navigation font size on phone and changed some wording

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ layout: default
       <div class="md:w-3/4 text-lg text-gray-700 leading-relaxed mx-4">
         <h2 class="text-4xl font-bold text-center md:text-left mb-12 text-gray-800">About Stan Neo</h2>
         <p class="mb-6">Lead data scientist with more than 10 years old experience in building Gen AI and ML solutions.</p>
-        <p class="mb-6">An experienced data science trainer who taught more than 1.4k students in 3.7k hours</p>
+        <p class="mb-6">Helped over 1,400 professionals and learners build data science skills through more than 3,700 hours of hands-on instruction and mentorship.</p>
         <ul class="list-disc list-inside text-gray-700 mb-6">
           <li>Lead data scientist in Citibank (Current)</li>
           <li>Built the data science practice in Trust Bank from start till launch</li>
@@ -45,7 +45,7 @@ layout: default
         <div class="p-6">
           <svg class="w-16 h-16 mx-auto mb-4 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6.253v11.494m-9-5.747h18"></path></svg>
           <h3 class="text-2xl font-bold mb-2">Practical Guidance, Not Just Theory</h3>
-          <p>I’ve helped over 1,400 learners—from fresh graduates to mid-career professionals—build real skills in AI, data, and tech. I understand the learning curve, career doubts, and job market realities you face. My approach is hands-on, industry-relevant, and focused on getting you from where you are to where you want to be—with confidence and clarity.</p>
+          <p>I've guided over 1,400 individuals—ranging from fresh graduates to mid-career professionals—in developing practical skills in AI, data, and technology. I understand the learning curve, career doubts, and job market realities you face. My approach is hands-on, industry-relevant, and focused on getting you from where you are to where you want to be—with confidence and clarity.</p>
         </div>
         <div class="p-6">
           <svg class="w-16 h-16 mx-auto mb-4 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v.01"></path></svg>
