added a contact me section

--- a/index.html
+++ b/index.html
@@ -167,6 +167,16 @@ The content was well-structured and easy to digest. I feel like an SQL basics wi
 
   
 
+  <section id="contact" class="py-20 bg-blue-600 text-white text-center">
+    <div class="container mx-auto px-4">
+      <h2 class="text-3xl font-bold mb-4">Have Questions? Let's Connect!</h2>
+      <p class="text-lg mb-8">Feel free to reach out to me on Telegram for any inquiries or discussions.</p>
+      <a href="https://t.me/stanneo_ds" target="_blank" class="inline-block bg-white text-blue-600 font-bold py-3 px-8 rounded-full text-lg shadow-lg hover:bg-gray-100 transform transition duration-300 hover:scale-105">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram Icon" class="inline-block w-6 h-6 mr-2"> Connect on Telegram
+      </a>
+    </div>
+  </section>
+
 </div>
 
 <!-- Trigger new GitHub Pages deployment -->
